force-app/main/default/objects/Activities__c/fields/Gilead_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antifungal</fullName>
            </value>
            <value>
                <fullName>Authorized Generic Use Harvoni/Epclusa</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Cystic Fibrosis (CF)</fullName>
            </value>
            <value>
                <fullName>Hepatitis B Virus (HBV)</fullName>
            </value>
            <value>
                <fullName>Hepatitis C Virus (HCV)</fullName>
            </value>
            <value>
                <fullName>Human Immunodeficiency Virus (</fullName>
            </value>
            <value>
                <fullName>Inflammation</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nonalcoholic Steatohepatitis (NASH)</fullName>
            </value>
            <value>
                <fullName>Oncology (ONC)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PrEP</fullName>
            </value>
            <value>
                <fullName>Primary Biliary Cholangitis (P</fullName>
            </value>
            <value>
                <fullName>Pulmonary Arterial Hypertensio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>