force-app/main/default/objects/Activities__c/fields/Gilead_Resolution_Required__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Resolution_Required__c</fullName>
    <label>Resolution Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forwarded Request to Corporate Contact Center</fullName>
            </value>
            <value>
                <fullName>Forwarded Request to Sales Ops</fullName>
            </value>
            <value>
                <fullName>Forwarded Request to Site Lobby</fullName>
            </value>
            <value>
                <fullName>Forwarded Request to Transportation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>OB Call</fullName>
            </value>
            <value>
                <fullName>Reported AE/SSR</fullName>
            </value>
            <value>
                <fullName>Reported PQC</fullName>
            </value>
            <value>
                <fullName>Spoke off FAQs</fullName>
            </value>
            <value>
                <fullName>Triaged to AE</fullName>
            </value>
            <value>
                <fullName>Triaged to Admin</fullName>
            </value>
            <value>
                <fullName>Triaged to Authorized Generics Line</fullName>
            </value>
            <value>
                <fullName>Triaged to Business Conduct</fullName>
            </value>
            <value>
                <fullName>Triaged to Cayston Access</fullName>
            </value>
            <value>
                <fullName>Triaged to Clinical Line</fullName>
            </value>
            <value>
                <fullName>Triaged to Club G</fullName>
            </value>
            <value>
                <fullName>Triaged to Crisis Center/C3i Management</fullName>
            </value>
            <value>
                <fullName>Triaged to EH&amp;S</fullName>
            </value>
            <value>
                <fullName>Triaged to Employee Resources</fullName>
            </value>
            <value>
                <fullName>Triaged to Facilities/Site Services</fullName>
            </value>
            <value>
                <fullName>Triaged to Finance</fullName>
            </value>
            <value>
                <fullName>Triaged to Gilead Personnel</fullName>
            </value>
            <value>
                <fullName>Triaged to Gilead Travel</fullName>
            </value>
            <value>
                <fullName>Triaged to IT</fullName>
            </value>
            <value>
                <fullName>Triaged to Kite</fullName>
            </value>
            <value>
                <fullName>Triaged to KnippeRx</fullName>
            </value>
            <value>
                <fullName>Triaged to Letairis Education Program</fullName>
            </value>
            <value>
                <fullName>Triaged to Lobby</fullName>
            </value>
            <value>
                <fullName>Triaged to MSO</fullName>
            </value>
            <value>
                <fullName>Triaged to Medical Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>