force-app/main/default/objects/Activities__c/fields/Gilead_Resource_Referenced__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Resource_Referenced__c</fullName>
    <label>Resource Referenced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>