force-app/main/default/objects/Activities__c/fields/Include_in_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Status Report</label>
    <type>Checkbox</type>
</CustomField>