force-app/main/default/objects/Activities__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>