force-app/main/default/objects/Activities__c/fields/Notification_Priority__c.field-meta.xml
<CustomField>
    <fullName>Notification_Priority__c</fullName>
    <label>Notification Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>