force-app/main/default/objects/Activities__c/fields/Of_Pages__c.field-meta.xml
<CustomField>
    <fullName>Of_Pages__c</fullName>
    <label># Of Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>