force-app/main/default/objects/Activities__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SITE MGMT</fullName>
            </value>
            <value>
                <fullName>USER MGMT</fullName>
            </value>
            <value>
                <fullName>INCIDENT MGMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>