force-app/main/default/objects/Activities__c/fields/Parent_Activity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Activity</label>
    <referenceTo>Activities__c</referenceTo>
    <relationshipLabel>Related Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>