force-app/main/default/objects/Activities__c/fields/Patient_Info_Link__c.field-meta.xml
<CustomField>
    <fullName>Patient_Info_Link__c</fullName>
    <label>Patient Info Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>