force-app/main/default/objects/Activities__c/fields/Planned_Completion__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion__c</fullName>
    <label>Planned Completion</label>
    <type>DateTime</type>
</CustomField>