force-app/main/default/objects/Activities__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>1-ASAP</fullName>
            </value>
            <value>
                <fullName>2-High</fullName>
            </value>
            <value>
                <fullName>3-Medium</fullName>
            </value>
            <value>
                <fullName>4-Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>