force-app/main/default/objects/Activities__c/fields/Repeat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Frequency__c</fullName>
    <label>Repeat Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Non-Repeating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>