force-app/main/default/objects/Activities__c/fields/Repeat_Until__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Until__c</fullName>
    <label>Repeat Until</label>
    <type>DateTime</type>
</CustomField>