force-app/main/default/objects/Activities__c/fields/Resolution_Age__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Age__c</fullName>
    <formula>Resolved_On__c - Escalated_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>