force-app/main/default/objects/Activities__c/fields/Resolved_On__c.field-meta.xml
<CustomField>
    <fullName>Resolved_On__c</fullName>
    <label>Resolved On</label>
    <type>DateTime</type>
</CustomField>