force-app/main/default/objects/Activities__c/fields/Response_Syntellect_Id__c.field-meta.xml
<CustomField>
    <fullName>Response_Syntellect_Id__c</fullName>
    <label>Response - Syntellect Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>