force-app/main/default/objects/Activities__c/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <formula>TEXT(Case__r.Contact_Sites__r.Site__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Country</label>
    <type>Text</type>
</CustomField>