force-app/main/default/objects/Activities__c/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <formula>Case__r.SiteNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Number</label>
    <type>Text</type>
</CustomField>