force-app/main/default/objects/Activities__c/fields/SMS_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>SMS_Contact_Phone__c</fullName>
    <label>SMS Contact Phone #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>