force-app/main/default/objects/Activities__c/fields/SMS_Delivery_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SMS_Delivery_DateTime__c</fullName>
    <label>SMS Delivery DateTime</label>
    <type>DateTime</type>
</CustomField>