force-app/main/default/objects/Activities__c/fields/SMS_Delivery_Report__c.field-meta.xml
<CustomField>
    <fullName>SMS_Delivery_Report__c</fullName>
    <label>SMS Delivery Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>