force-app/main/default/objects/Activities__c/fields/SMS_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message_Id__c</fullName>
    <label>SMS Message Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>