force-app/main/default/objects/Activities__c/fields/SMS_Send_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>SMS_Send_Response_Code__c</fullName>
    <label>SMS Send Response Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>