force-app/main/default/objects/Activities__c/fields/SMS_Send_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Send_Response_Message__c</fullName>
    <label>SMS Send Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>