force-app/main/default/objects/Activities__c/fields/SMS_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent_DateTime__c</fullName>
    <label>SMS Sent DateTime</label>
    <type>DateTime</type>
</CustomField>