force-app/main/default/objects/Activities__c/fields/SMS_Shipping_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Shipping_Id__c</fullName>
    <label>SMS Shipping Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>