force-app/main/default/objects/Activities__c/fields/Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Name__c</fullName>
    <formula>Case__r.Study_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Name</label>
    <type>Text</type>
</CustomField>