force-app/main/default/objects/Activities__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <formula>Case__r.Subarea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Area</label>
    <type>Text</type>
</CustomField>