force-app/main/default/objects/Activities__c/fields/Sub_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Area__c</fullName>
    <formula>Case__r.Sub_Sub_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Sub-Area</label>
    <type>Text</type>
</CustomField>