force-app/main/default/objects/Activities__c/fields/Syntellect_Id__c.field-meta.xml
<CustomField>
    <fullName>Syntellect_Id__c</fullName>
    <label>Syntellect Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>