force-app/main/default/objects/Activities__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountTypes__c.Type__c</field>
            <operation>equals</operation>
            <value>3rd Party</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountTypes__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>