force-app/main/default/objects/Activities__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Call - Inbound</fullName>
            </value>
            <value>
                <fullName>Call - Outbound</fullName>
            </value>
            <value>
                <fullName>De-escalation</fullName>
            </value>
            <value>
                <fullName>Email - Inbound</fullName>
            </value>
            <value>
                <fullName>Email - Outbound</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Knowledge Base Usage</fullName>
            </value>
            <value>
                <fullName>Next Steps</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Suspended-Awaiting Cust Action</fullName>
            </value>
            <value>
                <fullName>Update Request</fullName>
            </value>
            <value>
                <fullName>Transfer AE</fullName>
            </value>
            <value>
                <fullName>Transfer PC</fullName>
            </value>
            <value>
                <fullName>Transfer Combo</fullName>
            </value>
            <value>
                <fullName>Escalate - Internal- PCT</fullName>
            </value>
            <value>
                <fullName>Escalate - Client- PCT</fullName>
            </value>
            <value>
                <fullName>Call-Outbound-PCT</fullName>
            </value>
            <value>
                <fullName>Email-Outbound PCT</fullName>
            </value>
            <value>
                <fullName>Call-Inbound-PCT</fullName>
            </value>
            <value>
                <fullName>Email-Inbound PCT</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>iConnect</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Automated Follow-up email sent</fullName>
            </value>
            <value>
                <fullName>Issue not resolved</fullName>
            </value>
            <value>
                <fullName>Escalate - Internal</fullName>
            </value>
            <value>
                <fullName>Escalate - Tier2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>