force-app/main/default/objects/Activities__c/fields/Work_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Extension__c</fullName>
    <formula>Contact_Name__r.Work_Phone_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Phone Extension</label>
    <type>Text</type>
</CustomField>