force-app/main/default/objects/Activities__c/recordTypes/HC_Pharma.recordType-meta.xml
<RecordType>
    <fullName>HC_Pharma</fullName>
    <active>true</active>
    <description>This record type is used for pharma.</description>
    <label>HC Pharma</label>
</RecordType>