force-app/main/default/objects/Activities__c/validationRules/C3I_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>C3I_Description</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(Description__c),
 Account_Name__c = &quot;AbbVie Clinical&quot;
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description is a required field for AbbVie US Field Help Desk Organization.  Please enter a value for the field</errorMessage>
</ValidationRule>