force-app/main/default/objects/Activities__c/validationRules/C3i_Novartis_Escalation_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>C3i_Novartis_Escalation_Type_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Account_Name__c = &quot;Novartis&quot; ,
  ISBLANK(TEXT(Escalation_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Escalation_Type__c</errorDisplayField>
    <errorMessage>Escalation Type is a required field for this activity type. Please select the Escalation Type to the activity.</errorMessage>
</ValidationRule>